--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>Live Golf Streaming</title>
   <style>
     body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: black;
       color: white;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
     }
+
     header {
       display: flex;
       justify-content: space-between;
@@ -20,84 +20,99 @@
       padding: 1rem 2rem;
       background-color: black;
     }
+
     .logo {
       color: limegreen;
       font-size: 2rem;
       font-weight: bold;
     }
+
     nav a {
       color: white;
-      margin-left: 1.5rem;
       text-decoration: none;
+      margin-left: 1.5rem;
       font-weight: bold;
     }
+
+    .section-title {
+      color: limegreen;
+      font-size: 1.75rem;
+      margin: 2rem;
+    }
+
     .stream-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1.5rem;
-      padding: 2rem;
+      padding: 0 2rem 2rem;
     }
+
     .stream {
       position: relative;
       overflow: hidden;
-      border-radius: 10px;
+      border-radius: 12px;
       transition: transform 0.3s ease;
     }
+
     .stream:hover {
       transform: scale(1.03);
     }
+
     .stream iframe {
       width: 100%;
       height: 200px;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
     }
+
     .live-badge {
       position: absolute;
       top: 10px;
       left: 10px;
       background-color: red;
       color: white;
+      font-size: 0.8rem;
       padding: 0.3rem 0.6rem;
-      font-size: 0.75rem;
-      font-weight: bold;
       border-radius: 4px;
+      font-weight: bold;
     }
-    .section-title {
-      color: limegreen;
-      font-size: 1.75rem;
-      margin: 2rem 2rem 1rem;
-    }
+
     .blog-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1.5rem;
       padding: 0 2rem 2rem;
     }
+
     .blog-post {
       background-color: #111;
-      padding: 1rem;
       border-radius: 10px;
+      padding: 1rem;
     }
+
     .blog-post h3 {
       color: limegreen;
+      margin-top: 0;
     }
+
     .blog-post p {
       color: #ccc;
     }
+
     #submit {
-      padding: 1rem 2rem 3rem;
+      padding: 2rem;
     }
+
     footer {
       text-align: center;
       padding: 1rem;
       background-color: #111;
       color: gray;
-      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
+
   <header>
     <div class="logo">LGS</div>
     <nav>
@@ -108,6 +123,7 @@
   </header>
 
   <section id="live">
+    <div class="section-title">Live Streams</div>
     <div class="stream-grid">
       <div class="stream">
         <div class="live-badge">LIVE</div>
@@ -144,11 +160,12 @@
 
   <section id="submit">
     <div class="section-title">Submit a Stream</div>
-    <p style="color: lightgray;">Want to be featured? Submit your stream anonymously using <a href="https://forms.gle/YOUR_FORM_LINK" style="color: limegreen;" target="_blank">this form</a>.</p>
+    <p style="color: #aaa; text-align: center;">Want to be featured? Submit your stream anonymously using <a href="https://forms.gle/YOUR_FORM_LINK" target="_blank" style="color: limegreen;">this form</a>.</p>
   </section>
 
   <footer>
     &copy; 2025 Live Golf Streaming. All rights reserved.
   </footer>
+
 </body>
 </html>
